add dataset download link

--- a/keras_cv_on_TPU.ipynb
+++ b/keras_cv_on_TPU.ipynb
@@ -13,6 +13,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Download dataset via code for YOLOv8\n",
+    "# url = https://public.roboflow.com/object-detection/self-driving-car/3\n",
+    "\n",
     "import os\n",
     "from tqdm.auto import tqdm\n",
     "import xml.etree.ElementTree as ET\n",
